# fiddle-flask-freestyle

./: .env  .env_template  .gitignore  Dockerfile  app.py  compose.yaml  manage.py  pyproject.toml
app/: __init__.py
app/bootstrap/: __init__.py
app/config/: __init__.py
scripts/: entrypoint.local.sh
